[CBRD-22738] Refactoring regu_var.h & xasl_support.h (#1460)
ttp://jira.cubrid.org/browse/CBRD-22738

### Changes:

  1. Move all structures that are not related to regular variable from regu_var.h
  2. Move regu alloc/init functionality from xasl_support/parser_support to xasl_regu_alloc.

### Move aggregation/analytics from regu_var.h -
  1. Move XASL structures to xasl_aggregate.hpp & xasl_analytic.hpp
  2. Move query structures & functions from xasl.h/query_opfunc to query_aggregate & query_analytic
  3. Separate qdata_aggregate_interpolation & qdata_analytic_interpolation
  NOTE - some interpolation functions that are used by both aggregates and analytics remained in query_opfunc
  4. stx_init_analytic_type_unserialized_fields() -> analytic_list_node->init()
  5. buildlist_proc_node.agg_hash_context converted to pointer.

### Move predicate expressions from regu_var.h
  1. Move enums and structures to xasl_predicate.hpp
  2. Add m_ prefix to pred_expr union fields to avoid type name conflicts.
  3. Move re-eveluation structures and functions to query_reevaluation.

### Other regu_var.h
  1. Move heap_cache_attrinfo code to heap_attrinfo.h
  2. Replace UT_CLEAR_ATTR_DESCR() with attr_descr_node::reset()
  3. Move val_descr & xasl_state to query_executor
  4. Move qproc_db_value_list & val_list_node to xasl.h
  5. Move range structures & index_info to access_spec.hpp
  6. Removed REGU_VARIABLE_XASL
  7. Move METHOD_TYPE, METHOD_SIG & METHOD_SIG_LIST to method_def.hpp
  8. Move RANGE, KEY_VAL_RANGE, KEY_RANGE, KEY_INFO & INDX_INFO to access_spec.hpp.

### xasl_regu_alloc

1. Migrate all regu alloc functionality to xasl_regu_alloc from parser_support/xasl_support. Overloading regu_init changes how values are initialized. Existing types have been migrated by:
- use default constructor to initialize (instead of trivial initialization functions):
    QPROC_DB_VALUE_LIST/regu_dbvlist_alloc, ANALYTIC_EVAL_TYPE/regu_analytic_eval_alloc, 

--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -181,6 +181,7 @@ set(PARSER_SOURCES
   ${PARSER_DIR}/show_meta.c
   ${PARSER_DIR}/type_checking.c
   ${PARSER_DIR}/view_transform.c
+  ${PARSER_DIR}/xasl_regu_alloc.cpp
   ${PARSER_DIR}/xasl_generation.c
   ${PARSER_DIR}/func_type.cpp
   )
@@ -188,6 +189,7 @@ set(PARSER_HEADERS
   ${PARSER_DIR}/func_type.hpp
   ${PARSER_DIR}/parse_type.hpp
   ${PARSER_DIR}/parser_allocator.hpp
+  ${PARSER_DIR}/xasl_regu_alloc.hpp
   )
 
 set(OPTIMIZER_SOURCES
@@ -265,11 +267,15 @@ set(STORAGE_SOURCES
   
 set(XASL_SOURCES
   ${XASL_DIR}/access_json_table.cpp
+  ${XASL_DIR}/xasl_analytic.cpp
   ${XASL_DIR}/xasl_stream.cpp
   )
 set(XASL_HEADERS
   ${XASL_DIR}/access_json_table.hpp
+  ${XASL_DIR}/access_spec.hpp
   ${XASL_DIR}/compile_context.h
+  ${XASL_DIR}/xasl_aggregate.hpp
+  ${XASL_DIR}/xasl_analytic.hpp
   ${XASL_DIR}/xasl_stream.hpp
   )
 
