[CBRD-22736] Regu variable own implementation file (#1465)
http://jira.cubrid.org/browse/CBRD-22736

Create an implementation file for regular variables where we can add more functionality in the future.

### Changes:

1. Convert regu_variable_node from struct to class and rename regu_var.h to hpp. These two changes touch most of files.
2. Move reguvar tree mapping functions from fetch.c to regu_var.cpp/hpp - names as map_regu. Include TYPE_REGUVAL_LIST/TYPE_REGU_VAR_LIST in mapping. Add map_regu_and_xasl function to also advance into nested XASL nodes.
3. Add clear_xasl function. Not used yet, but it may help in the future (e.g. xts_debug_check).
4. Remove unused arith_list_node.next fields. Affected files/functions:

    - xasl_generation.c / pt_make_regu_arith, pt_make_regu_pred
    - xasl_regu-alloc.cpp / regu_init (arith_list_node &)
    - query_dump.c / qdump_print_arith_expression
    - query_executor.c / qexec_clear_arith_list
    - stream_to_xasl.c / stx_build_arith_type
    - xasl_to_stream.c / xts_process_arith_type

5. Add clear_xasl function to pred_expr; xasl_predicate.cpp was added.

--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -201,17 +201,18 @@ set(OPTIMIZER_SOURCES
   )
 
 set(QUERY_SOURCES
+  ${QUERY_DIR}/arithmetic.c
+  ${QUERY_DIR}/crypt_opfunc.c
+  ${QUERY_DIR}/cursor.c
   ${QUERY_DIR}/execute_schema.c
   ${QUERY_DIR}/execute_statement.c
-  ${QUERY_DIR}/arithmetic.c
-  ${QUERY_DIR}/cursor.c
-  ${QUERY_DIR}/query_dump.c
-  ${QUERY_DIR}/query_method.c
   ${QUERY_DIR}/numeric_opfunc.c
   ${QUERY_DIR}/query_cl.c
+  ${QUERY_DIR}/query_dump.c
+  ${QUERY_DIR}/query_method.c
+  ${QUERY_DIR}/regu_var.cpp
   ${QUERY_DIR}/string_opfunc.c
   ${QUERY_DIR}/xasl_to_stream.c
-  ${QUERY_DIR}/crypt_opfunc.c
   )
 
 set(OBJECT_SOURCES
@@ -268,6 +269,7 @@ set(STORAGE_SOURCES
 set(XASL_SOURCES
   ${XASL_DIR}/access_json_table.cpp
   ${XASL_DIR}/xasl_analytic.cpp
+  ${XASL_DIR}/xasl_predicate.cpp
   ${XASL_DIR}/xasl_stream.cpp
   )
 set(XASL_HEADERS
@@ -276,6 +278,7 @@ set(XASL_HEADERS
   ${XASL_DIR}/compile_context.h
   ${XASL_DIR}/xasl_aggregate.hpp
   ${XASL_DIR}/xasl_analytic.hpp
+  ${XASL_DIR}/xasl_predicate.hpp
   ${XASL_DIR}/xasl_stream.hpp
   )
 
