--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -492,6 +492,7 @@ install(FILES
   RENAME dbi.h
   )
 install(FILES
+  ${COMPAT_DIR}/dbtran_def.h
   ${COMPAT_DIR}/dbtype_def.h
   ${COMPAT_DIR}/dbtype_function.h
   ${COMPAT_DIR}/db_date.h
