[CBRD-22723] JSON_PATH (#1462)
Comprising Changes:
1. Implement json_path matching and avoid regexes from JSON_MAPPER functions (search, conatins_path, extract) with json_path matching
2. Create db_json_path.cpp/hpp containing JSON_PATH class + every function related only to paths from db_json.cpp
3. Create db_json_types_internal.cpp/hpp containing types + funcs not exposed by db_json.hpp but need to be shared with db_json_path
4. Create db_json_allocators.cpp/hpp to contain JSON_PRIVATE_ALLOCATOR
5. Unify json_path to one implementation (added get,set,erase independent of json_pointer implementations)

--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -49,6 +49,9 @@ set(COMPAT_SOURCES
   ${COMPAT_DIR}/db_elo.c
   ${COMPAT_DIR}/db_info.c
   ${COMPAT_DIR}/db_json.cpp
+  ${COMPAT_DIR}/db_json_allocator.cpp
+  ${COMPAT_DIR}/db_json_path.cpp
+  ${COMPAT_DIR}/db_json_types_internal.cpp
   ${COMPAT_DIR}/db_macro.c
   ${COMPAT_DIR}/db_obj.c
   ${COMPAT_DIR}/db_old.c
