--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -341,6 +341,12 @@ set(TRANSACTION_SOURCES
 set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/log_system_tran.hpp
   )
+  
+set(UTILS_HEADERS
+  ${UTILS_DIR}/pragma_pop.h
+  ${UTILS_DIR}/pragma_push.h
+  ${UTILS_DIR}/pragma_suppress.h
+  )
 
 set(STORAGE_SOURCES
   ${STORAGE_DIR}/btree.c
