[CBRD-22770] log_lsa files (#1477)
http://jira.cubrid.org/browse/CBRD-22770

Remove log_lsa and all related code from storage_common.h and add log_lsa header/implementation files.

  1. move LSA_SET_TEMP_LSA macro to disk_manager.c and LSA_IS_INIT_NONTEMP/LSA_IS_INIT_TEMP to page_buffer.c.
  2. move structures, LSA macros (replaced by inline functions) and lsa_to_string function to log_lsa.hpp
  3. also move NULL_LSA global constant from log_page_buffer.c to log_lsa.hpp.
  4. include log_lsa.hpp wherever log_lsa is used.
  5. only forward definitions to C-compiled headers - object_representation.h and locator_cl.h.
  6. add missing header includes that were hidden dependencies.

--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -254,14 +254,18 @@ set(JSP_SOURCES
   )
 
 set(TRANSACTION_SOURCES
-  ${TRANSACTION_DIR}/log_compress.c
   ${TRANSACTION_DIR}/boot_cl.c
   ${TRANSACTION_DIR}/locator.c
   ${TRANSACTION_DIR}/locator_cl.c
   ${TRANSACTION_DIR}/lock_table.c
   ${TRANSACTION_DIR}/log_comm.c
-  ${TRANSACTION_DIR}/transaction_cl.c
+  ${TRANSACTION_DIR}/log_compress.c
+  ${TRANSACTION_DIR}/log_lsa.cpp
   ${TRANSACTION_DIR}/log_writer.c
+  ${TRANSACTION_DIR}/transaction_cl.c
+  )
+set(TRANSACTION_HEADERS
+  ${TRANSACTION_DIR}/log_lsa.hpp
   )
 
 set(STORAGE_SOURCES
@@ -402,6 +406,7 @@ add_library(cubridcs SHARED
   ${OBJECT_SOURCES}
   ${JSP_SOURCES}
   ${TRANSACTION_SOURCES}
+  ${TRANSACTION_HEADERS}
   ${STORAGE_SOURCES}
   ${ES_SOURCES}
   ${PROBES_OBJECT}
