add new header to cmake files

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -286,6 +286,7 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/wait_for_graph.c
   )
 set(TRANSACTION_HEADERS
+  ${TRANSACTION_DIR}/log_common_impl.h
   ${TRANSACTION_DIR}/log_lsa.hpp
   ${TRANSACTION_DIR}/log_system_tran.hpp
   )
