--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -255,6 +255,7 @@ set(OBJECT_SOURCES
 set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/log_generator.hpp
   ${REPLICATION_DIR}/log_consumer.hpp
+  ${REPLICATION_DIR}/replication_common.hpp
   ${REPLICATION_DIR}/replication_master_node.hpp
   ${REPLICATION_DIR}/replication_master_senders_manager.hpp
   ${REPLICATION_DIR}/replication_node.hpp
