--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -318,7 +318,7 @@ set(THREAD_HEADERS
 set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/boot_cl.c
   ${TRANSACTION_DIR}/boot_sr.c
-  ${TRANSACTION_DIR}/clientid.cpp
+  ${TRANSACTION_DIR}/client_credentials.cpp
   ${TRANSACTION_DIR}/locator.c
   ${TRANSACTION_DIR}/locator_cl.c
   ${TRANSACTION_DIR}/locator_sr.c
@@ -343,7 +343,7 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/wait_for_graph.c
   )
 set(TRANSACTION_HEADERS
-  ${TRANSACTION_DIR}/clientid.hpp
+  ${TRANSACTION_DIR}/client_credentials.hpp
   ${TRANSACTION_DIR}/log_archives.hpp
   ${TRANSACTION_DIR}/log_common_impl.h
   ${TRANSACTION_DIR}/log_lsa.hpp
