--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -273,6 +273,7 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/lock_manager.c
   ${TRANSACTION_DIR}/lock_table.c
   ${TRANSACTION_DIR}/log_2pc.c
+  ${TRANSACTION_DIR}/log_append.cpp
   ${TRANSACTION_DIR}/log_comm.c
   ${TRANSACTION_DIR}/log_compress.c
   ${TRANSACTION_DIR}/log_global.c
@@ -292,6 +293,7 @@ set(TRANSACTION_SOURCES
 set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/client_credentials.hpp
   ${TRANSACTION_DIR}/log_2pc.h
+  ${TRANSACTION_DIR}/log_append.hpp
   ${TRANSACTION_DIR}/log_archives.hpp
   ${TRANSACTION_DIR}/log_common_impl.h
   ${TRANSACTION_DIR}/log_lsa.hpp
