[CBRD-22823] Transaction transient objects - modified classes (#1503)
http://jira.cubrid.org/browse/CBRD-22823

Separate transaction transient objects (lifetime expires with transaction) from `log_impl.h`. The plan is to add here all similar objects. Long-term we may identify a common approach for all these objects.

### transaction transient files

- move modified_class_list and rename as tx_transient_class_entry/tx_transient_class_registry.
- tx_transient_class_entry: change class name to std::string.
- tx_transient_class_registry: provide necessary interface to interact with modified classes: add/decache_heap_repr/clear, empty/has_class, map, to_string
  NOTE: to_string is used for logtb_descriptors_start_scan and provides more verbose information than it used to. test results revising may be needed.
- replace all usages with new interface.

### other

- replace log_rollback_classrepr_cache with tx_transient_class_registry::decache_heap_repr
- make log_cleanup_modified_class and log_cleanup_modified_class_list more clean
- make fpcache_remove_by_class/xcache_remove_by_oid OID argument const. Several functions are modified as consequence in xasl_cache.c

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -288,6 +288,7 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/recovery.c
   ${TRANSACTION_DIR}/replication.c
   ${TRANSACTION_DIR}/transaction_sr.c
+  ${TRANSACTION_DIR}/transaction_transient.cpp
   ${TRANSACTION_DIR}/wait_for_graph.c
   )
 set(TRANSACTION_HEADERS
@@ -302,6 +303,7 @@ set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/log_system_tran.hpp
   ${TRANSACTION_DIR}/log_volids.hpp
   ${TRANSACTION_DIR}/transaction_global.hpp
+  ${TRANSACTION_DIR}/transaction_transient.hpp
   )
 
 set(STORAGE_SOURCES
