--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -233,6 +233,7 @@ set(OBJECT_SOURCES
   ${OBJECT_DIR}/class_description.cpp
   ${OBJECT_DIR}/class_object.c
   ${OBJECT_DIR}/elo.c
+  ${OBJECT_DIR}/lob_locator.cpp
   ${OBJECT_DIR}/object_accessor.c
   ${OBJECT_DIR}/object_description.cpp
   ${OBJECT_DIR}/object_domain.c
@@ -253,6 +254,9 @@ set(OBJECT_SOURCES
   ${OBJECT_DIR}/virtual_object.c
   ${OBJECT_DIR}/work_space.c
   )
+set(OBJECT_HEADERS
+  ${OBJECT_DIR}/lob_locator.hpp
+)
 
 set(JSP_SOURCES
   ${JSP_DIR}/jsp_cl.c
@@ -406,26 +410,27 @@ add_library(cubridcs SHARED
   ${EXECUTABLE_SOURCES}
   ${COMPAT_SOURCES}
   ${COMPAT_SOURCES_C}
-  ${BASE_SOURCES}
   ${BASE_HEADERS}
-  ${HEAPLAYER_SOURCES}
+  ${BASE_SOURCES}
+  ${ES_SOURCES}
+  ${COMMUNICATION_SOURCES}
   ${CONNECTION_SOURCES}
   ${CONNECTION_TCP_SOURCE}
-  ${COMMUNICATION_SOURCES}
-  ${PARSER_SOURCES}
-  ${PARSER_HEADERS}
-  ${OPTIMIZER_SOURCES}
-  ${QUERY_SOURCES}
-  ${QUERY_HEADERS}
+  ${HEAPLAYER_SOURCES}
+  ${OBJECT_HEADERS}
   ${OBJECT_SOURCES}
-  ${JSP_SOURCES}
-  ${TRANSACTION_SOURCES}
-  ${TRANSACTION_HEADERS}
-  ${STORAGE_SOURCES}
-  ${ES_SOURCES}
+  ${OPTIMIZER_SOURCES}
+  ${PARSER_HEADERS}
+  ${PARSER_SOURCES}
   ${PROBES_OBJECT}
-  ${XASL_SOURCES}
+  ${QUERY_HEADERS}
+  ${QUERY_SOURCES}
+  ${JSP_SOURCES}
+  ${TRANSACTION_HEADERS}
+  ${TRANSACTION_SOURCES}
+  ${STORAGE_SOURCES}
   ${XASL_HEADERS}
+  ${XASL_SOURCES}
   )
 set_target_properties(cubridcs PROPERTIES SOVERSION "${CUBRID_MAJOR_VERSION}.${CUBRID_MINOR_VERSION}")
 
