[CBRD-22806] Core dumped in fpcache_entry_uninit (#1497)
* fix free and init to only free pred_expr->unpack_info

* fix other references. add todos

* move xasl_unpack_info struct and non-stream_to_xasl & xasl_unpack_info funcs to xasl_unpack_info.cpp/hpp

* allocate filter_predicate_with_context from outside the xasl_unpack_info buffer

* fix adding new files

* rename xasl_unpack_info functions & fix comments

* fix forward declarations

* remove forgotten filter_pred_cache.h

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -344,6 +344,7 @@ set(XASL_SOURCES
   ${XASL_DIR}/xasl_analytic.cpp
   ${XASL_DIR}/xasl_predicate.cpp
   ${XASL_DIR}/xasl_stream.cpp
+  ${XASL_DIR}/xasl_unpack_info.cpp
   )
 set(XASL_HEADERS
   ${XASL_DIR}/access_json_table.hpp
@@ -351,6 +352,7 @@ set(XASL_HEADERS
   ${XASL_DIR}/compile_context.h
   ${XASL_DIR}/xasl_aggregate.hpp
   ${XASL_DIR}/xasl_analytic.hpp
+  ${XASL_DIR}/xasl_unpack_info.hpp
   ${XASL_DIR}/xasl_predicate.hpp
   ${XASL_DIR}/xasl_stream.hpp
   )
