[CBRD-22822] Lob locator (#1513)
http://jira.cubrid.org/browse/CBRD-22822

### lob_locator - client/server common interface of manipulating lob files

- Move LOB_LOCATOR_STATE from elo.h
- Move lob_locator add, find, change_state & drop from elo.c (renamed)
- Move lob_locator_is_valid, lob_locator_key, lob_locator_meta from log_manager.c (renamed)

### transaction_transient - server manipulation of lob files

- move entire functionality from log_manager.c/xserver_interface.h; change functions prefix from log_ to tx_
- replace key/key_data in lob_locator_entry with std::string m_key

### other

- remove network_interface_cl SA_MODE unreachable lob_locator code.

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -246,12 +246,16 @@ set(QUERY_HEADERS
 
 set(OBJECT_SOURCES
   ${OBJECT_DIR}/elo.c
-  ${OBJECT_DIR}/set_object.c
-  ${OBJECT_DIR}/object_representation.c
-  ${OBJECT_DIR}/object_primitive.c
-  ${OBJECT_DIR}/transform.c
+  ${OBJECT_DIR}/lob_locator.cpp
   ${OBJECT_DIR}/object_domain.c
+  ${OBJECT_DIR}/object_primitive.c
+  ${OBJECT_DIR}/object_representation.c
+  ${OBJECT_DIR}/set_object.c
+  ${OBJECT_DIR}/transform.c
   )
+set(OBJECT_HEADERS
+  ${OBJECT_DIR}/lob_locator.hpp
+)
   
 set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/log_consumer.cpp
@@ -435,6 +439,7 @@ set (CUBRID_LIB_HEADERS
   ${COMMUNICATION_HEADERS}
   ${COMPAT_HEADERS}
   ${MONITOR_HEADERS}
+  ${OBJECT_HEADERS}
   ${QUERY_HEADERS}
   ${REPLICATION_HEADERS}
   ${STORAGE_HEADERS}
