move all cub_master related source files to designated directory
Signed-off-by: Valeri Nistor <nistor.valeri@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,7 +252,7 @@ if(UNIX)
       message(SEND_ERROR "Cannot compile 32-bit program with gcc version (${CMAKE_CXX_COMPILER_VERSION})")
       message(FATAL_ERROR "4.3.4 or higher version is required. (ref. https://gcc.gnu.org/bugzilla/show_bug.cgi?id=16185)")
     endif(ENABLE_32BIT AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.3.4)
-    
+
     if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.4.7)
       message(SEND_ERROR "Cannot compile with gcc version ${CMAKE_CXX_COMPILER_VERSION}. Require at least 4.4.7.")
     endif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.4.7)
@@ -278,7 +278,7 @@ if(UNIX)
   endif(CMAKE_COMPILER_IS_GNUCC)
 else(UNIX)
   # turn off LinkIncremental option for release build
-  
+
   #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
   string(REPLACE "INCREMENTAL:YES" "INCREMENTAL:NO" replaceIncFlag ${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO})
   set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/INCREMENTAL:NO ${replaceIncFlag}" )
@@ -332,7 +332,7 @@ find_package(BISON)
 
 if(BISON_FOUND)
   if(BISON_VERSION VERSION_GREATER 2.3)
-    set(USE_BISON_NEWDIRECTIVE 1) 
+    set(USE_BISON_NEWDIRECTIVE 1)
   endif(BISON_VERSION VERSION_GREATER 2.3)
 else(BISON_FOUND)
   if(UNIX)
@@ -372,8 +372,8 @@ endif(USE_BISON_NEWDIRECTIVE)
 
 set(CSQL_GRAMMAR_INPUT ${CMAKE_CURRENT_BINARY_DIR}/csql_grammar.yy)
 
-# because csql_grammar.yy are generated through a custom command 
-# whenever csql_grammar.y is modified, bison and flex will be 
+# because csql_grammar.yy are generated through a custom command
+# whenever csql_grammar.y is modified, bison and flex will be
 # run to create new outputs
 
 bison_target(csql_grammar ${CSQL_GRAMMAR_INPUT} ${CSQL_GRAMMAR_OUTPUT}
@@ -414,8 +414,8 @@ endif(USE_BISON_NEWDIRECTIVE)
 set(ESQL_GRAMMAR_INPUT ${CMAKE_CURRENT_BINARY_DIR}/esql_grammar.yy)
 
 
-# because esql_grammar.yy are generated through a custom command 
-# whenever esql_grammar.y is modified, bison and flex will be 
+# because esql_grammar.yy are generated through a custom command
+# whenever esql_grammar.y is modified, bison and flex will be
 # run to create new outputs
 
 bison_target(esql_grammar ${ESQL_GRAMMAR_INPUT} ${ESQL_GRAMMAR_OUTPUT}
@@ -477,6 +477,7 @@ set(EXECUTABLES_DIR          ${CMAKE_SOURCE_DIR}/src/executables)
 set(HEAPLAYERS_DIR           ${CMAKE_SOURCE_DIR}/src/heaplayers)
 set(JDBC_DIR                 ${CMAKE_SOURCE_DIR}/src/jdbc)
 set(JSP_DIR                  ${CMAKE_SOURCE_DIR}/src/jsp)
+set(MASTER_DIR               ${CMAKE_SOURCE_DIR}/src/master)
 set(MONITOR_DIR              ${CMAKE_SOURCE_DIR}/src/monitor)
 set(OBJECT_DIR               ${CMAKE_SOURCE_DIR}/src/object)
 set(ODBC_DIR                 ${CMAKE_SOURCE_DIR}/src/odbc)
@@ -506,6 +507,7 @@ include_directories(
   src/executables
   src/heaplayers
   src/jsp
+  src/master
   src/monitor
   src/object
   src/optimizer
