--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -26,6 +26,7 @@ set(EXECUTABLE_SOURCES
   ${EXECUTABLES_DIR}/csql_result.c
   ${EXECUTABLES_DIR}/csql_support.c
   ${EXECUTABLES_DIR}/csql_result_format.c
+  ${EXECUTABLES_DIR}/extract_schema.cpp  
   ${EXECUTABLES_DIR}/util_sa.c
   ${EXECUTABLES_DIR}/util_cs.c
   ${EXECUTABLES_DIR}/util_common.c
@@ -38,6 +39,10 @@ set(EXECUTABLE_SOURCES
   ${EXECUTABLES_DIR}/file_hash.c
   ${EXECUTABLES_DIR}/loader.c
   ${EXECUTABLES_DIR}/loader_object_table.c
+  )
+
+set(EXECUTABLE_HEADERS
+  ${EXECUTABLES_DIR}/extract_schema.hpp
   )
 
 set(COMPAT_SOURCES
@@ -95,6 +100,7 @@ set(BASE_SOURCES
   ${BASE_DIR}/perf_monitor.c
   ${BASE_DIR}/pinnable_buffer.cpp
   ${BASE_DIR}/pinning.cpp
+  ${BASE_DIR}/printer.cpp
   ${BASE_DIR}/ini_parser.c
   ${BASE_DIR}/system_parameter.c
   ${BASE_DIR}/fault_injection.c
@@ -138,6 +144,7 @@ set(BASE_HEADERS
   ${BASE_DIR}/pinning.hpp
   ${BASE_DIR}/pinnable_buffer.hpp
   ${BASE_DIR}/porting_inline.hpp
+  ${BASE_DIR}/printer.hpp
   ${BASE_DIR}/resource_tracker.hpp
 )
 
@@ -508,6 +515,10 @@ SET_SOURCE_FILES_PROPERTIES(
   )
 
 add_library(cubridsa SHARED
+  ${EXECUTABLE_SOURCES}
+  ${EXECUTABLE_HEADERS}
+  ${COMPAT_SOURCES}
+  ${BASE_SOURCES}
   ${BASE_HEADERS}
   ${BASE_SOURCES}
   ${COMMUNICATION_SOURCES}
