[CBRD-22828] MVCC table refactoring (#1523)
http://jira.cubrid.org/browse/CBRD-22828

Transaction MVCC refactoring

Migrate MVCC functionality from log_tran_table.c/log_impl.h & mvcc.c/mvcc.h to two new files - mvcc_active_tran and mvcc_table. At the same time, make use C++ standard to simplify memory management & synchronization. Rewrite some functions to make them simpler and more readable. Implementation for `defined(HAVE_ATOMIC_BUILTINS)` is removed.

### MVCC active transactions map

Group bitmap & long transactions array into mvcc_active_tran structure. It is used by both mvcc_trans_status and mvcc_snapshot. Stores bitmap of active (unsed bit) and inactive (set bit) transactions. Old transactions are moved to a separate array, that is supposed to be small & sparse.

The structure handles required memory resources and provides an interface to interact with the active transactions map, by interogating its information (e.g. is mvccid active), or by manipulating (set mvccid as inactive). All its data is private and is checked for consistency on debug-mode on each operation changing it.

Structure does not ensure thread safety. Access on mvcc_trans_status maps is managed by mvcc_table.

Glossary - previous terminology is used (bit_area, long_tran) except "unit" instead of "element" for convenience. members gained the m_ prefix.

1. old code moved to this structure:

  - mvcc.h
      MVCC_GET_BITAREA_ELEMENT_PTR => get_get_unit_of
      MVCC_BITAREA_MASK => get_mask_of
      MVCC_CLEAR_SNAPSHOT_DATA => reset ()
      mvcc_snapshot members replaced with m_active_mvccs
      
  - mvcc.c
      mvcc_is_id_in_snapshot/mvcc_is_active_id => is_active ()

  - log_impl.h
      mvcc_trans_status members replaced with m_active_mvccs
      
  - long_tran_table.c
      MVCC_BITAREA_ELEMENT_BITS => UNIT_TO_BITS_COUNT
      MVCC_BITAREA_ELEMENT_ALL_COMMITTED => ALL_COMMITTED
      MVCC_BITAREA_ELEMENTS_AFTER_FULL_CLEANUP => cleanup_migrate_to_long_

--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -348,6 +348,8 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/log_tran_table.c
   ${TRANSACTION_DIR}/log_writer.c
   ${TRANSACTION_DIR}/mvcc.c
+  ${TRANSACTION_DIR}/mvcc_active_tran.cpp
+  ${TRANSACTION_DIR}/mvcc_table.cpp
   ${TRANSACTION_DIR}/replication.c
   ${TRANSACTION_DIR}/recovery.c
   ${TRANSACTION_DIR}/transaction_cl.c
@@ -366,6 +368,9 @@ set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/log_storage.hpp
   ${TRANSACTION_DIR}/log_system_tran.hpp
   ${TRANSACTION_DIR}/log_volids.hpp
+  ${TRANSACTION_DIR}/mvcc.h
+  ${TRANSACTION_DIR}/mvcc_active_tran.hpp
+  ${TRANSACTION_DIR}/mvcc_table.hpp
   ${TRANSACTION_DIR}/transaction_global.hpp
   ${TRANSACTION_DIR}/transaction_transient.hpp
   )
